# object-detection-yolo

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/model/: model1.yaml
data/: data_exploration.ipynb  download_data.py
notebooks/: 0_Test_YOLOv11.ipynb  1_EDA.ipynb  2_Prepare_data.ipynb  2_train_model.ipynb  4_YOLO11.ipynb  dataset.yaml
src/: train_model.py  utils.py
