
[project]
name = "object-detection-yolo"
version = "0.1.0"
description = ""
authors = [
    { name = "Team 6 AnyoneAI" }
]
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3.2"
]

[project.optional-dependencies]
dev = [
    "pdoc3>=0.11.6",
    "pytest>=8.3.5",
    "pre-commit>=4.2.0"
]


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.lint]
# Enable common linting rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "Q",   # flake8-quotes
]

ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Use tabs for indentation
indent-style = "tab"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
ignore_missing_imports = true
