[project]
name = "object-detection-yolo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.52",
    "dotenv>=0.9.9",
    "ipykernel>=7.0.1",
    "label-studio>=1.21.0",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
